public/css/blog_css.css
/*----------------Throughout blog-------------*/
.content {
    padding-left:4rem;
}

body {
    /*background-color: #A8A6A6;*/
    /*background-color: #FFEACC;*/
    background-color: #49727F;
}

h2 {
    color: #011B24;
}

p {
    margin-bottom: .3rem;
}

/*---------------------Navbar----------------*/
.navbar {
    min-height: 10rem;
    /*background-color: #002a0e;*/
    background-color: #1A4553;
    color: #A8A6A6;
    /*color: #999;*/
}

.navbar-default .navbar-nav>li>a  {
    color: #A8A6A6;
    /*color: #777;*/
    /*color: white;*/
}

.navbar-default .navbar-nav>li>a:hover  {
    /*color: #A8A6A6;*/
    color: #011B24;

}

#navbar_name h1 {
    font-size: 3.5rem;
}

#navbar_name h2 {
    font-size: 2rem;
    margin-top: 1.5rem;
    color: #A8A6A6;
}

.navbar-header {
    min-height: 10rem;
}

.navbar-brand img {
    max-height: 10rem;
    max-width: 10rem;
    float: left;
    border-radius: 50%;
}

#navbar_name {
    float: left;
}

#right_links {
    float:right;
    padding-right: 2rem;
    padding-top: 2rem;
}

.navbar-header {
    border: none;
}

/*-----------------post index----------------*/
.post-index a {
    /*color: #777;*/
    color: #011B24;
}

.post-index a:hover {
    color: #1A4553;
}

.post-index p {
    color: black;
}

/*--------------index pagination------------*/


/*---------------post show--------------------*/
.post-show h2 {
    color: #011B24;
}

.post-show button {
    margin-top: 1rem;
}

/*--------------form pages-----------------*/
.form-input {
    margin-bottom: 1.2rem;
}

.login-form > .inline-form {
    position: absolute;
    left: 17rem;
}

.signup-form > .inline-form {
    position: absolute;
    left: 22rem;
}

